--- a/admin/product.html
+++ b/admin/product.html
@@ -92,36 +92,7 @@
         const search = document.querySelector('div.search-bar');
         renderSearchbar(search);
     </script>
-    <script type="text/javascript">
-        var tabledata = [
-            {id:1, name:"Chuột Lamzu Atlantis Mini", price: 2500000},
-            {id:2, name:"Chuột Lamzu Atlantis", price: 2500000},
-            {id:3, name:"Chuột Razer Deathadder V3", price: 3300000},
-            {id:4, name:"Chuột Glorious Model One Pro", price: 2800000},
-            {id:5, name:"Chuột Ninjutso Sora", price: 2500000},
-        ];
-
-        var table = new Tabulator("#table", {
-            autoResize:true,
-            data:tabledata, //assign data to table
-            layout:"fitDataTable",
-            responsiveLayout:true, // enable responsive layouts
-            pagination:true, //enable.
-            paginationSize:10, // this option can take any positive integer value
-            columns:[ //Define Table Columns
-                {title:"ID", field:"id", width:100},
-                {title:"Name", field:"name", minWidth: 500},
-                {title:"Price", field:"price", minWidth: 200},
-            ],
-        });
-        
-        //trigger an alert message when the row is clicked
-        table.on("rowClick", function(e, row){ 
-            var data = row.getData()
-            console.log(data.id)
-            localStorage.setItem('itemID', data.id)
-            window.location.href = '/admin/edit.html'
-        });
+    <script type="module" src="/assets/js/admin/product.js">
     </script>
 
 </body>
